tests/integration/errors/test_generic_wrong_type_arg_count.sn
struct Pair < T, U > =>
  first: T
  second: U

fn main(): int =>
  var p: Pair < int > = Pair < int > {first: 1, second: 2}
  return 0
